[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]


[project]
name = "wenet"
version = "0.1.0"
dependencies = [
  "torchaudio==2.2.2",
  "torch==2.2.2",
  "openai-whisper",
  "typeguard==2.*",
  "wandb",
  "pyyaml",
  "numpy<2",
]
